# System_Integration

./: .dccache  .gitignore
Lecture 1/: README.md
Lecture 1/Assignment/python_project/: main.py  pyproject.toml  read_parse_files.py
Lecture 1/dotnet_project/: Program.cs  ReadParseFiles.cs  dotnet_project.csproj
Lecture 1/node_project/: main.js  main.ts  package-lock.json  package.json
Lecture 1/python_project/: main.py  read_parse_files.py
Lecture 1/rust_project/: main.rs  test_functions.rs
Lecture 10/#Assignment/: README.md  index.html
Lecture 10/Adaptive Streaming/: README.md
Lecture 10/Base_64_Encoding/: README.md
Lecture 10/Embed_youtube_video/: README.md
Lecture 11/Basic_Redis/: Basic_Redis.csproj  Customer.cs  Program.cs  README.md
Lecture 11/Redis_Pub_Sub/: README.md
Lecture 12/: README.md
Lecture 12/GraphQL_Annotation_Example/: GraphQL_Annotation_Example.csproj  Program.cs
Lecture 12/GraphQL_Project_Impl/: DataStore.cs  GraphQL_Project_Impl.csproj  Program.cs
Lecture 12/GraphQL_Schema_Example/: Program.cs  Schema.graphql
Lecture 2/Assignment/: README.md
Lecture 2/ClassNotes/python_poetry/: pyproject.toml
Lecture 2/TsNode_Express/: package-lock.json
Lecture 2/dotnet_API/: WeatherForecast.cs
Lecture 2/golang_API/: main.go
Lecture 2/python_poetry/: main.py
Lecture 3/ClassNotes/: .gitignore  index.js  main.py
Lecture 3/ClassNotes/server_to_server/: pyproject.toml
Lecture 4/Lecture 4/: Dockerfile  README.md  create-remote-storage.tf  mysql_backup.sql
Lecture 4/Mandatory_1_P1/: README.md
Lecture 5/: README.md
(+176 files in other folders)
